# helper_model_2

bruno/Helper Mk2/: New User.bru  Update User.bru  bruno.json
discord/: Cargo.toml
discord/src/: main.rs
server/: .fish  Cargo.toml  config.toml  helper.db
server/.sqlx/: query-2e3a3db64fcf2c005162735b9403deca754624311a97826e4ea4480038e71184.json  query-559b54e2b1da53b698703ccfa4086eb9431b943ef3167fc4c59f103d275ba93d.json  query-5d78e25abc450a97262df1fdb28f2e115839a722db78ed860ce8bae8d4bd7a89.json  query-9e0af6bf2f9636f9b5210c2d2ac71a4da78efabe3d855148251f1a01602fe110.json
server/migrations/: 00_init.sql
server/src/: config.rs  main.rs  user.rs
server/src/api/: user.rs
