[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
